syntax = "proto3";
package DomainServices.CaseService;
option csharp_namespace = "DomainServices.CaseService.Contracts";

import "Messages/Case.proto";

message UpdateActiveTasksRequest {
	int64 CaseId = 1;
	repeated ActiveTask Tasks = 2;
}