syntax = "proto3";
package DomainServices.CaseService;
option csharp_namespace = "DomainServices.CaseService.Contracts";

import "Messages/CustomerData.proto";

message UpdateCustomerDataRequest {
	int64 CaseId = 1;

	// Upravena dada o klientovi
	CustomerData Customer = 2;
}